Slight fix for link overlapping

--- a/src/Components/RecipeCompactCard/RecipeCompactCard.module.css
+++ b/src/Components/RecipeCompactCard/RecipeCompactCard.module.css
@@ -19,7 +19,7 @@
   cursor: pointer;
 }
 
-.header:hover .cover {
+.container:hover .header .cover {
   transform: scale(1.08);
 }
 
@@ -158,7 +158,7 @@
 }
 
 .content {
-  padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   min-width: 0;
 }
 
